--- a/inspiration.html
+++ b/inspiration.html
@@ -29,7 +29,6 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
 
@@ -227,8 +226,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Bar &amp; Restaurant</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted">Inspiration</li>
         </ul>
       </div>
     </div>
@@ -239,15 +238,14 @@
 <!-- courses -->
 <section class="section">
   <div class="container">
+    <h2 class="text-center">Kitchen</h2>
+    <br>
     <!-- course list -->
 <div class="row justify-content-center">
-  <div class="col-lg-12 col-sm-12 mb-5">
-    <p>Absolute Marble and Granite designs, fabricates and installs any type of stone product for bars, restaurants, night clubs, and more. Our commercial division has installed 1,000′s of granite, marble, quartz, recycled glass and tile projects at locations in Philadelphia, NYC, Pennsylvania, New Jersey, Maryland and Delaware. We pride ourselves on offering the latest and greatest in material choices in addition to professional and timely installation.</p>
-  </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/1.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/kitchen/1.jpg" alt="course thumb">
       <!-- <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Bianco Venatino</h4>
@@ -258,50 +256,245 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/2.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/kitchen/2.jpg" alt="course thumb">
     </div>
   </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/3.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/kitchen/3.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/kitchen/4.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/kitchen/5.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/kitchen/6.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/kitchen/7.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/kitchen/8.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/kitchen/9.jpg" alt="course thumb">
     </div>
   </div>
    <!-- course item -->
    <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/4.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/kitchen/10.jpg" alt="course thumb">
     </div>
   </div>
    <!-- course item -->
    <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/5.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/kitchen/11.jpg" alt="course thumb">
     </div>
   </div>
    <!-- course item -->
    <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/6.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/kitchen/12.png" alt="course thumb">
+    </div>
+  </div>
+  </div>
+  <hr>
+
+  <h2 class="text-center">Bathroom</h2>
+    <br>
+    <!-- course list -->
+<div class="row justify-content-center">
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bathroom/1.jpg" alt="course thumb">
+      <!-- <div class="card-body">
+        <a href="product.html">
+          <h4 class="card-title">Bianco Venatino</h4>
+        </a>
+      </div> -->
     </div>
   </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/7.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/bathroom/2.jpg" alt="course thumb">
     </div>
   </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/8.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/bathroom/3.jpg" alt="course thumb">
     </div>
   </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/9.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/bathroom/4.jpg" alt="course thumb">
     </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bathroom/5.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bathroom/6.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bathroom/7.jpg" alt="course thumb">
+    </div>
+  </div>
+  </div>
+
+  <hr>
+
+  <h2 class="text-center">Bar & Entertainment</h2>
+    <br>
+    <!-- course list -->
+<div class="row justify-content-center">
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bar/1.jpg" alt="course thumb">
+      <!-- <div class="card-body">
+        <a href="product.html">
+          <h4 class="card-title">Bianco Venatino</h4>
+        </a>
+      </div> -->
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bar/2.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bar/3.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bar/4.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/bar/5.jpg" alt="course thumb">
+    </div>
+  </div>
+  </div>
+
+  <hr>
+
+  <h2 class="text-center">Fireplace & Outdoor Kitchen</h2>
+    <br>
+    <!-- course list -->
+<div class="row justify-content-center">
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/fireplace/1.jpg" alt="course thumb">
+      <!-- <div class="card-body">
+        <a href="product.html">
+          <h4 class="card-title">Bianco Venatino</h4>
+        </a>
+      </div> -->
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/fireplace/2.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/fireplace/3.jpg" alt="course thumb">
+    </div>
+  </div>
+  </div>
+
+  <hr>
+
+  <h2 class="text-center">Boat & Yacht</h2>
+    <br>
+    <!-- course list -->
+<div class="row justify-content-center">
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/boat/1.jpg" alt="course thumb">
+      <!-- <div class="card-body">
+        <a href="product.html">
+          <h4 class="card-title">Bianco Venatino</h4>
+        </a>
+      </div> -->
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/boat/2.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/boat/3.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/boat/4.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/boat/5.jpg" alt="course thumb">
+    </div>
+  </div>
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/boat/6.jpg" alt="course thumb">
+    </div>
+  </div>
   </div>
   </div>
 </section>
@@ -390,6 +583,7 @@
 
 <!-- Main Script -->
 <script src="js/script.js"></script>
+
 
 <!-- Start of HubSpot Embed Code -->
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22729667.js"></script>
