--- a/quartz.html
+++ b/quartz.html
@@ -73,7 +73,6 @@
   <div class="navigation w-100">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background-color: #fff;">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="178" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -117,26 +116,33 @@
                 <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
                 <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
                 <!-- <li><a class="dropdown-item" href="quartz.html">Quartz</a></li> -->
-                <li class="dropdown-item dropdown dropleft">
+                <li class="dropdown-item dropdown dropright">
                   <a class="dropdown-toggle" href="#" id="navbarDropdownSubmenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Quartz
                   </a>
                   <ul class="dropdown-menu dropdown-submenu" aria-labelledby="navbarDropdownSubmenu">
-                    <li><a class="dropdown-item" href="caesarstone_quartz.html">Caesarstone Quartz</a></li>
-                    <li><a class="dropdown-item" href="cambria_quartz.html">Cambria Quartz</a></li>
-                    <li><a class="dropdown-item" href="ecorecycled_quartz.html">ECO Recycled Quartz</a></li>
-                    <li><a class="dropdown-item" href="lgviatera_quartz.html">LG Viatera Quartz</a></li>
-                    <li><a class="dropdown-item" href="qpremium_quartz.html">Q Premium Quartz</a></li>
-                    <li><a class="dropdown-item" href="silestone_quartz.html">Silestone Quartz</a></li>
+                    <li><a class="dropdown-item" href="caesarstone_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Caesarstone Quartz</a></li>
+                    <li><a class="dropdown-item" href="cambria_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Cambria Quartz</a></li>
+                    <li><a class="dropdown-item" href="ecorecycled_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">ECO Recycled Quartz</a></li>
+                    <li><a class="dropdown-item" href="lgviatera_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">LG Viatera Quartz</a></li>
+                    <li><a class="dropdown-item" href="qpremium_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Q Premium Quartz</a></li>
+                    <li><a class="dropdown-item" href="silestone_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Silestone Quartz</a></li>
                   </ul>
                 </li>
               </ul>
             </li>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="200" alt="logo"></a>
             <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
-            <li class="nav-item @@freeestimate">
-              <a class="nav-link" href="select_quote.html">SelectQuote</a>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                SelectQuote
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="book_appointment.html">Book an appointment</a></li>
+                <li><a class="dropdown-item" href="select_quote.html">SelectQuote</a></li>
+              </ul>
             </li>
             <li class="nav-item @@about">
               <a class="nav-link" href="about.html">About</a>
@@ -583,9 +589,9 @@
   img {
   transition: transform .7s ease-in-out;
 }
-img:hover {
+/* img:hover {
   transform: scale(1.5);
-}
+} */
 </style>
 
 </body>
