--- a/about.html
+++ b/about.html
@@ -80,7 +80,6 @@
   <div class="navigation w-100">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background-color: #fff;">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="178" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -124,26 +123,33 @@
                 <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
                 <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
                 <!-- <li><a class="dropdown-item" href="quartz.html">Quartz</a></li> -->
-                <li class="dropdown-item dropdown dropleft">
+                <li class="dropdown-item dropdown dropright">
                   <a class="dropdown-toggle" href="#" id="navbarDropdownSubmenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Quartz
                   </a>
                   <ul class="dropdown-menu dropdown-submenu" aria-labelledby="navbarDropdownSubmenu">
-                    <li><a class="dropdown-item" href="caesarstone_quartz.html">Caesarstone Quartz</a></li>
-                    <li><a class="dropdown-item" href="cambria_quartz.html">Cambria Quartz</a></li>
-                    <li><a class="dropdown-item" href="ecorecycled_quartz.html">ECO Recycled Quartz</a></li>
-                    <li><a class="dropdown-item" href="lgviatera_quartz.html">LG Viatera Quartz</a></li>
-                    <li><a class="dropdown-item" href="qpremium_quartz.html">Q Premium Quartz</a></li>
-                    <li><a class="dropdown-item" href="silestone_quartz.html">Silestone Quartz</a></li>
+                    <li><a class="dropdown-item" href="caesarstone_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Caesarstone Quartz</a></li>
+                    <li><a class="dropdown-item" href="cambria_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Cambria Quartz</a></li>
+                    <li><a class="dropdown-item" href="ecorecycled_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">ECO Recycled Quartz</a></li>
+                    <li><a class="dropdown-item" href="lgviatera_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">LG Viatera Quartz</a></li>
+                    <li><a class="dropdown-item" href="qpremium_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Q Premium Quartz</a></li>
+                    <li><a class="dropdown-item" href="silestone_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Silestone Quartz</a></li>
                   </ul>
                 </li>
               </ul>
             </li>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="200" alt="logo"></a>
             <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
-            <li class="nav-item @@freeestimate">
-              <a class="nav-link" href="select_quote.html">SelectQuote</a>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                SelectQuote
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="book_appointment.html">Book an appointment</a></li>
+                <li><a class="dropdown-item" href="select_quote.html">SelectQuote</a></li>
+              </ul>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="about.html">About</a>
@@ -228,8 +234,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted">About Us</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" style="color: #0B0B45 !important;" href="index.html">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">About Us</li>
         </ul>
       </div>
     </div>
@@ -246,9 +252,9 @@
       </div>
       <div class="col-7">
         <!-- <img class="img-fluid w-100 mb-4" src="images/about/about.png" alt="about image"> -->
-        <h2 class="section-title">Absolute Marble & Granite Corp</h2>
-        <p>We are one of the fastest-growing providers of fabrication and installation of stone materials in South Jersey. We take pride in our amazing price points, speedy fabrication and installation timeframes. These offerings, combined with our first-class customer service, create an unmatched experience for all our customers and partners.</p>
-        <p>
+        <h2 class="section-title text-center">Absolute Marble & Granite</h2>
+        <p style="font-size: 14px;">We are one of the fastest-growing providers of fabrication and installation of stone materials in South Jersey. We take pride in our amazing price points, speedy fabrication and installation timeframes. These offerings, combined with our first-class customer service, create an unmatched experience for all our customers and partners.</p>
+        <p style="font-size: 14px;">
           We specialize in both commercial and residential projects, we offer competitive pricing and supply one stop shopping to our customers, as well as a very rapid turnaround time for installation. We pride ourselves in unparalleled service and quality from our order processing, delivery and quality control. We offer a one-year warranty on all of our installations, and the material has a limited lifetime warranty. Our materials are imported from all over the world. Not only do we provide granite and marble but we also deal with silestone, caesarstone, and zodiac. You are also able to obtain a variety of samples, sinks and faucets that are located at our showroom. We are licensed and insured.</p>
       </div>
     </div>
@@ -259,16 +265,19 @@
 <section class="section" style="padding-top: 1px;">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4" style="border-right: 2px solid #ffbc3b;">
-        <h2 class="section-title">Who <span style="color: #ffbc3b;">We Are</span></h2>
-        <p>Absolute Marble and Granite is a full service fabricator and installer of customized natural and engineered stones. Our experienced team has completed thousands of projects including residential and commercials properties. We specialize in fabricating kitchen countertops, fireplaces, bar tops and vanities.</p>
+      <div class="col-lg-4" style="border-right: 2px solid #ffbc3b; background-color: #1e1d1c;">
+        <br>
+        <h2 class="section-title text-white">Who <span style="color: #ffbc3b;">We Are</span></h2>
+        <p class="text-white">Absolute Marble and Granite is a full service fabricator and installer of customized natural and engineered stones. Our experienced team has completed thousands of projects including residential and commercials properties. We specialize in fabricating kitchen countertops, fireplaces, bar tops and vanities.</p>
       </div>
-      <div class="col-lg-4" style="border-right: 2px solid #ffbc3b;">
-        <h2 class="section-title">What <span style="color: #ffbc3b;">We Do</span></h2>
-        <p>At Absolute Marble and Granite, we are committed to service and value. We offer competitive pricing and exceptional service to every single one of our clients. We also have a quick turnaround lead time.
+      <div class="col-lg-4" style="border-right: 2px solid #ffbc3b; background-color: #282624;">
+        <br>
+        <h2 class="section-title text-white">What <span style="color: #ffbc3b;">We Do</span></h2>
+        <p class="text-white">At Absolute Marble and Granite, we are committed to service and value. We offer competitive pricing and exceptional service to every single one of our clients. We also have a quick turnaround lead time.
           Thank you for your interest and we look forward to working with you!</p>
       </div>
       <div class="col-lg-4">
+        <br>
         <h2 class="section-title">Our <span style="color: #ffbc3b;">Mission</span></h2>
         <p>Our mission is to provide our customers with high-quality workmanship, service and stone at the best prices in the industry. Our rigorous quality control and extensive selection of stones has contributed to our tremendous growth and unparalelled customer experience. Customer satisfaction is what we have earned and we are proud of it.</p>
       </div>
@@ -283,7 +292,7 @@
 
     <div class="section-title">
       <!-- <span>Team</span> -->
-      <h2>Team</h2>
+      <h2>Testimonials</h2>
     </div>
 
     <div class="row">
@@ -363,13 +372,13 @@
 <!-- /funfacts -->
 
 <!-- success story -->
-<section class="section bg-cover" data-background="images/backgrounds/1.png">
+<!-- <section class="section bg-cover" data-background="images/backgrounds/1.png">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-sm-4 position-relative success-video">
-        <!-- <a class="play-btn venobox" href="https://youtu.be/nA1Aqp0sPQo" data-vbtype="video">
+        <a class="play-btn venobox" href="https://youtu.be/nA1Aqp0sPQo" data-vbtype="video">
           <i class="ti-control-play"></i>
-        </a> -->
+        </a>
       </div>
       <div class="col-lg-6 col-sm-8">
         <div class="bg-white p-5">
@@ -388,66 +397,110 @@
     </div>
   </div>
   <br>
-</section>
+</section> -->
 <!-- /success story -->
+
+<section class="section-sm">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="d-flex align-items-center section-title justify-content-between">
+          <h2 class="mb-0  mr-3" style="text-align: center;">Inspirations</h2>
+          <div class="border-top w-100 border-primary d-none d-sm-block"></div>
+        </div>
+      </div>
+    </div>
+    <!-- course list -->
+<div class="row justify-content-center">
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/1.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/2.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/3.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/4.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/5.jpg" alt="course thumb">
+    </div>
+  </div>
+  <!-- course item -->
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/6.jpg" alt="course thumb">
+      <!-- <div class="card-body">
+        <a href="product.html">
+          <h4 class="card-title">Absolute Night</h4>
+        </a>
+      </div> -->
+    </div>
+  </div>
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/7.png" alt="course thumb">
+    </div>
+  </div>
+  <div class="col-lg-4 col-sm-6 mb-5">
+    <div class="card p-0 border-primary rounded-0 hover-shadow">
+      <img class="card-img-top rounded-0" src="images/inspiration/8.jpg" alt="course thumb">
+    </div>
+  </div>
+</div>
+<!-- /course list -->
+    <!-- mobile see all button -->
+    <div class="row">
+      <div class="col-12 text-center">
+        <a href="product.html" class="btn btn-sm btn-outline-primary d-sm-none d-inline-block">sell all</a>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- footer -->
 <footer>
   <!-- footer content -->
   <div class="footer bg-footer section border-bottom">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
+        <div class="col-lg-3 col-sm-8 mb-5 mb-lg-0">
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" width="178" alt="logo"></a>
           <ul class="list-unstyled text-white">
             <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
-            <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888">(856) 786-4888</a></li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888" class="text-white">(856) 786-4888</a></li>
             <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
-            <li class="mb-2"><a href="mailto:phan@absolutegranites.com">phan@absolutegranites.com</a></li>
+            <li class="mb-2"><a href="mailto:phan@absolutegranites.com" class="text-white">phan@absolutegranites.com</a></li>
           </ul>
         </div>
         <!-- company -->
-        <div class="col-md-2">
-          <h4 class="text-white mb-5">Home</h4>
-          <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="#">Inspiration</a></li>
-            <li class="mb-3"><a class="text-color" href="#">Commercial</a></li>
-            <li class="mb-3"><a class="text-color" href="#">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="#">Gallery</a></li>
-            <li class="mb-3"><a class="text-color" href="#">SelectQuote</a></li>
-            <li class="mb-3"><a class="text-color" href="#">About</a></li>
-            <li class="mb-3"><a class="text-color" href="#">Contact</a></li>
-          </ul>
+        <div class="row" style="margin-top: 90px; margin-left:40px;">
+          <div class="col"><a class="text-white" href="index.html">Homepage</a></div>
+          <div class="col"><a class="text-white" href="inspiration.html">Inspiration</a></div>
+          <div class="col"><a class="text-white" href="commercial.html">Commercial</a></div>
+          <div class="col"><a class="text-white" href="product.html">Product</a></div>
+          <div class="col"><a class="text-white" href="gallery.html">Gallery</a></div>
+          <div class="col"><a class="text-white" href="select_quote.html">SelectQuote</a></div>
+          <div class="col"><a class="text-white" href="about.html">About</a></div>
+          <div class="col"><a class="text-white" href="contact.html">Contact</a></div>
         </div>
-        <!-- links -->
-        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Inspiration</h4>
-          <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="kitchen.html">Kitchen</a></li>
-            <li class="mb-3"><a class="text-color" href="bathroom.html">Bathroom</a></li>
-            <li class="mb-3"><a class="text-color" href="bar.html">Bar & Entertainment</a></li>
-            <li class="mb-3"><a class="text-color" href="fireplace.html">Fireplace & Outdoor Kitchen</a></li>
-            <li class="mb-3"><a class="text-color" href="boat.html">Boat & Yacht</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Commercial</h4>
-          <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="restaurant.html">Bar & Restaurant</a></li>
-            <li class="mb-3"><a class="text-color" href="hotel.html">Hotel</a></li>
-            <li class="mb-3"><a class="text-color" href="appartment.html">Apartments & Condos</a></li>
-            <li class="mb-3"><a class="text-color" href="office.html">Office & Retail</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Product</h4>
-          <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
-            <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
-            <li class="mb-3"><a class="text-color" href="marble.html">Marble</a></li>
-            <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
-          </ul>
-        </div>
+        
       </div>
     </div>
   </div>
@@ -467,7 +520,8 @@
           <div class="row">
             <div class="col-md-6">
               <a href="privacy_policy.html" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
-              <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+              <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a> &nbsp;
+              <!-- <a href="sitemap.html" class="text-muted" style="font-size: 11px;">Site Map</a> -->
             </div>
           </div>
         </div>
@@ -524,6 +578,13 @@
 
 .team .member .social {
     margin-top: 15px;
+}
+
+.bg-white{
+    background-color: #0B0B45 !important;
+  }
+  .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: inherit;
 }
 </style>
 
