--- a/book_appointment.html
+++ b/book_appointment.html
@@ -29,7 +29,6 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
 
@@ -147,7 +146,7 @@
             <li class="nav-item @@about">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item @@contact">
+            <li class="nav-item active">
               <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
           </ul>
@@ -228,7 +227,7 @@
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
           <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Bar &amp; Restaurant</li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Contact Us</li>
         </ul>
       </div>
     </div>
@@ -236,76 +235,30 @@
 </section>
 <!-- /page title -->
 
-<!-- courses -->
-<section class="section">
+<!-- contact -->
+<section class="section bg-gray">
   <div class="container">
-    <!-- course list -->
-<div class="row justify-content-center">
-  <div class="col-lg-12 col-sm-12 mb-5">
-    <p>Absolute Marble and Granite designs, fabricates and installs any type of stone product for bars, restaurants, night clubs, and more. Our commercial division has installed 1,000′s of granite, marble, quartz, recycled glass and tile projects at locations in Philadelphia, NYC, Pennsylvania, New Jersey, Maryland and Delaware. We pride ourselves on offering the latest and greatest in material choices in addition to professional and timely installation.</p>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/1.jpg" alt="course thumb">
-      <!-- <div class="card-body">
-        <a href="product.html">
-          <h4 class="card-title">Bianco Venatino</h4>
-        </a>
-      </div> -->
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="section-title">Book An Appointment</h2>
+      </div>
     </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/2.jpg" alt="course thumb">
+    <div class="row">
+      <div class="col-lg-12 mb-4 mb-lg-0">
+        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+            <script>
+            hbspt.forms.create({
+                region: "na1",
+                portalId: "22729667",
+                formId: "9f609b68-1bd8-4ad3-ad08-21318b39bdf4",
+                version: "V2_PRERELEASE"
+            });
+            </script>
+      </div>
     </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/3.jpg" alt="course thumb">
-    </div>
-  </div>
-   <!-- course item -->
-   <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/4.jpg" alt="course thumb">
-    </div>
-  </div>
-   <!-- course item -->
-   <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/5.jpg" alt="course thumb">
-    </div>
-  </div>
-   <!-- course item -->
-   <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/6.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/7.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/8.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/restaurant/9.jpg" alt="course thumb">
-    </div>
-  </div>
   </div>
 </section>
-<!-- /courses -->
+<!-- /contact -->
 
 <!-- footer -->
 <footer>
@@ -396,14 +349,7 @@
 <!-- End of HubSpot Embed Code -->
 
 <style>
-  img {
-  transition: transform .7s ease-in-out;
-}
-/* img:hover {
-  transform: scale(1.5);
-} */
-
-.bg-white{
+  .bg-white{
     background-color: #0B0B45 !important;
   }
   .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
