--- a/select_quote.html
+++ b/select_quote.html
@@ -105,9 +105,6 @@
       <div class="navigation w-100">
         <div class="container">
           <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background-color: #fff;">
-            <a class="navbar-brand" href="index.html"
-              ><img src="images/logo.png" width="178" alt="logo"
-            /></a>
             <button
               class="navbar-toggler rounded-0"
               type="button"
@@ -227,7 +224,7 @@
                       <a class="dropdown-item" href="marble.html">Marbles</a>
                     </li>
                     <!-- <li><a class="dropdown-item" href="quartz.html">Quartz</a></li> -->
-                    <li class="dropdown-item dropdown dropleft">
+                    <li class="dropdown-item dropdown dropright">
                       <a
                         class="dropdown-toggle"
                         href="#"
@@ -239,53 +236,31 @@
                       >
                         Quartz
                       </a>
-                      <ul
-                        class="dropdown-menu dropdown-submenu"
-                        aria-labelledby="navbarDropdownSubmenu"
-                      >
-                        <li>
-                          <a
-                            class="dropdown-item"
-                            href="caesarstone_quartz.html"
-                            >Caesarstone Quartz</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="cambria_quartz.html"
-                            >Cambria Quartz</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            class="dropdown-item"
-                            href="ecorecycled_quartz.html"
-                            >ECO Recycled Quartz</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="lgviatera_quartz.html"
-                            >LG Viatera Quartz</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="qpremium_quartz.html"
-                            >Q Premium Quartz</a
-                          >
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="silestone_quartz.html"
-                            >Silestone Quartz</a
-                          >
-                        </li>
+                      <ul class="dropdown-menu dropdown-submenu" aria-labelledby="navbarDropdownSubmenu">
+                        <li><a class="dropdown-item" href="caesarstone_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Caesarstone Quartz</a></li>
+                        <li><a class="dropdown-item" href="cambria_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Cambria Quartz</a></li>
+                        <li><a class="dropdown-item" href="ecorecycled_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">ECO Recycled Quartz</a></li>
+                        <li><a class="dropdown-item" href="lgviatera_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">LG Viatera Quartz</a></li>
+                        <li><a class="dropdown-item" href="qpremium_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Q Premium Quartz</a></li>
+                        <li><a class="dropdown-item" href="silestone_quartz.html" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">Silestone Quartz</a></li>
                       </ul>
                     </li>
                   </ul>
                 </li>
+                <a class="navbar-brand" href="index.html"
+              ><img src="images/logo.png" width="200" alt="logo"
+            /></a>
                 <li class="nav-item @@gallery">
                   <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="select_quote.html">SelectQuote</a>
+                <li class="nav-item dropdown view">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    SelectQuote
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="book_appointment.html">Book an appointment</a></li>
+                    <li><a class="dropdown-item" href="select_quote.html">SelectQuote</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item @@about">
                   <a class="nav-link" href="about.html">About</a>
@@ -438,11 +413,11 @@
           <div class="col-md-8">
             <ul class="list-inline custom-breadcrumb mb-2">
               <li class="list-inline-item">
-                <a class="h2 text-primary font-secondary" href="index.html"
+                <a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;"
                   >Home</a
                 >
               </li>
-              <li class="list-inline-item text-white h3 font-secondary nasted">
+              <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">
                 Select Quote
               </li>
             </ul>
@@ -702,7 +677,27 @@
                 </div>
               </div>
               <br /><br /><br />
-              <h3>4. Your Information:</h3>
+              <h3>4. Sinks (Optional)</h3>
+              <br>
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="form-group form-check">
+                    <label class="form-check-label">
+                      <input
+                        class="form-check-input"
+                        type="checkbox"
+                        name="sink"
+                        id="sink"
+                      /><strong>Sinks</strong>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <img src="images/sink.png" alt="" />
+                </div>
+              </div>
+              <br /><br /><br />
+              <h3>5. Your Information:</h3>
               <div class="row">
                 <div class="col-md-6">
                   <label for="">Your Name</label>
@@ -774,58 +769,28 @@
       <div class="footer bg-footer section border-bottom">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
+            <div class="col-lg-3 col-sm-8 mb-5 mb-lg-0">
               <!-- logo -->
               <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" width="178" alt="logo"></a>
               <ul class="list-unstyled text-white">
                 <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
-                <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888">(856) 786-4888</a></li>
+                <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888" class="text-white">(856) 786-4888</a></li>
                 <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
-                <li class="mb-2"><a href="mailto:phan@absolutegranites.com">phan@absolutegranites.com</a></li>
+                <li class="mb-2"><a href="mailto:phan@absolutegranites.com" class="text-white">phan@absolutegranites.com</a></li>
               </ul>
             </div>
             <!-- company -->
-            <div class="col-md-2">
-              <h4 class="text-white mb-5">Home</h4>
-              <ul class="list-unstyled">
-                <li class="mb-3"><a class="text-color" href="#">Inspiration</a></li>
-                <li class="mb-3"><a class="text-color" href="#">Commercial</a></li>
-                <li class="mb-3"><a class="text-color" href="#">Product</a></li>
-                <li class="mb-3"><a class="text-color" href="#">Gallery</a></li>
-                <li class="mb-3"><a class="text-color" href="#">SelectQuote</a></li>
-                <li class="mb-3"><a class="text-color" href="#">About</a></li>
-                <li class="mb-3"><a class="text-color" href="#">Contact</a></li>
-              </ul>
+            <div class="row" style="margin-top: 90px; margin-left:40px;">
+              <div class="col"><a class="text-white" href="index.html">Homepage</a></div>
+              <div class="col"><a class="text-white" href="inspiration.html">Inspiration</a></div>
+              <div class="col"><a class="text-white" href="commercial.html">Commercial</a></div>
+              <div class="col"><a class="text-white" href="product.html">Product</a></div>
+              <div class="col"><a class="text-white" href="gallery.html">Gallery</a></div>
+              <div class="col"><a class="text-white" href="select_quote.html">SelectQuote</a></div>
+              <div class="col"><a class="text-white" href="about.html">About</a></div>
+              <div class="col"><a class="text-white" href="contact.html">Contact</a></div>
             </div>
-            <!-- links -->
-            <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
-              <h4 class="text-white mb-5">Inspiration</h4>
-              <ul class="list-unstyled">
-                <li class="mb-3"><a class="text-color" href="kitchen.html">Kitchen</a></li>
-                <li class="mb-3"><a class="text-color" href="bathroom.html">Bathroom</a></li>
-                <li class="mb-3"><a class="text-color" href="bar.html">Bar & Entertainment</a></li>
-                <li class="mb-3"><a class="text-color" href="fireplace.html">Fireplace & Outdoor Kitchen</a></li>
-                <li class="mb-3"><a class="text-color" href="boat.html">Boat & Yacht</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
-              <h4 class="text-white mb-5">Commercial</h4>
-              <ul class="list-unstyled">
-                <li class="mb-3"><a class="text-color" href="restaurant.html">Bar & Restaurant</a></li>
-                <li class="mb-3"><a class="text-color" href="hotel.html">Hotel</a></li>
-                <li class="mb-3"><a class="text-color" href="appartment.html">Apartments & Condos</a></li>
-                <li class="mb-3"><a class="text-color" href="office.html">Office & Retail</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
-              <h4 class="text-white mb-5">Product</h4>
-              <ul class="list-unstyled">
-                <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
-                <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
-                <li class="mb-3"><a class="text-color" href="marble.html">Marble</a></li>
-                <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
-              </ul>
-            </div>
+            
           </div>
         </div>
       </div>
@@ -845,7 +810,8 @@
               <div class="row">
                 <div class="col-md-6">
                   <a href="privacy_policy.html" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
-                  <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+                  <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a> &nbsp;
+                  <!-- <a href="sitemap.html" class="text-muted" style="font-size: 11px;">Site Map</a> -->
                 </div>
               </div>
             </div>
@@ -885,10 +851,13 @@
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22729667.js"></script>
 <!-- End of HubSpot Embed Code -->
 
-    <!-- <style>
-      input[type="checkbox"]{
-        color: #ffbc3b !important;
-      }
-    </style> -->
+    <style>
+     .bg-white{
+    background-color: #0B0B45 !important;
+  }
+  .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: inherit;
+}
+    </style>
   </body>
 </html>
